[package]
name = "reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio           = {version = "1.17.0", features = ["full"]}
clap            = {version = "3.1.9", features = ["derive"]}
chrono          = {version = "0.4", features = ["unstable-locales"]}
